# ch32v307-template

./: README.md
test/: CMakeLists.txt  Link.ld
test/Debug/: debug.h
test/Startup/: startup_ch32v30x_D8C.S
test/User/: CMakeLists.txt  main.c
